Drop use of JDK11 method